--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "merge-stream": "^1.0.0"
   },
   "dependencies": {
+    "@mdi/font": "^2.4.85",
+    "bootstrap-sass": "^3.3.7",
     "gulp-uglifycss": "^1.0.6",
-    "gulp-watch": "^4.3.10"
+    "gulp-watch": "^4.3.10",
+    "jquery": "^3.3.1",
+    "swiper": "^4.3.3"
   }
 }
